--- a/sass/_globali.scss
+++ b/sass/_globali.scss
@@ -41,7 +41,7 @@ section {
 	flex-direction: row;
 	justify-content: flex-start;
 	align-items: flex-start;
-	flex-wrap: nowrap;
+	flex-wrap: wrap;
 }		
 .fullscreen-top {
 	width: 100vw;
