--- a/sass/_globali.scss
+++ b/sass/_globali.scss
@@ -89,3 +89,26 @@ section {
 	max-width: 17vw;
 	margin: 0 0 -3vw 5vw;
 }
+#err404 {
+	border: 2px solid #FFFFFF;
+	border-radius: 24px 24px 0 0;
+	border-bottom: none;
+	margin: 12vw 20vw;
+	padding: 5vh 10vw 0 10vw;
+	img {
+		margin: 2vw 25vw 2vw 25vw;
+		max-width: 30%;
+	}
+	h1 {
+		margin: 0;
+		text-align: center;
+		font-size: 7rem;
+	}
+	p {
+		font-size: 3rem;
+		font-weight: 100;
+		margin-top: -1rem;
+		margin-bottom: 1rem;
+		letter-spacing: .2rem;
+	}
+}
