--- a/sass/_mqueries-mobile-e-tablet.scss
+++ b/sass/_mqueries-mobile-e-tablet.scss
@@ -96,6 +96,28 @@
         max-width: 70%;
         margin: 10% 0 0 15%;
     }
+    #err404 {
+        margin-top: 20vw;
+        img {
+            max-width: 50%;
+            margin: 2rem;
+        }
+        h1 {
+            font-size: 3rem;
+            margin: auto;
+        }
+        p {
+            font-size: 1.5rem;
+            letter-spacing: 0;
+            margin: auto;
+        }
+        a {
+            margin: 2rem;
+            font-size: 0.9rem;
+            width: 100%;
+            padding: 1.3rem 0 1.3rem 1rem;
+        }
+    }
     //^ TIPOGRAFIA
     h1.display {
         font-size: 3.5rem;
