--- a/sass/_mqueries-tablet.scss
+++ b/sass/_mqueries-tablet.scss
@@ -28,6 +28,17 @@
     section {
         padding: 5vh 10vw;
     }
+    #err404 {
+        img {
+            max-width: 40%; 
+        }
+        h1 {
+            font-size: 5rem;
+        }
+        p {
+            font-size: 2.5rem;
+        }
+    }
     //^ CARDS
     .card {
         width: 60vw;
