--- a/sass/_mqueries-tablet.scss
+++ b/sass/_mqueries-tablet.scss
@@ -39,6 +39,15 @@
             font-size: 2.5rem;
         }
     }
+    #mipresento {
+        img {
+            max-width: 30%;
+            margin: 10% 0 0 15%;
+        }
+        div {
+            max-width: 55%;
+        }  
+    }
     //^ CARDS
     .card {
         width: 60vw;
